# LLMforge

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/ml-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/ml-service/alembic/: env.py
apps/ml-service/alembic/versions/: 001_initial.py
apps/ml-service/app/: main.py
apps/ml-service/app/api/: datasets.py  health.py  inference.py  models.py  training.py
apps/ml-service/app/core/: celery_app.py  config.py  database.py  rate_limit.py  security.py  storage.py
apps/ml-service/app/models/: db_models.py
apps/ml-service/app/services/: cleaning.py  crud.py  parsers.py
apps/ml-service/app/training/: callbacks.py  distributed.py  engine.py
apps/ml-service/app/workers/: data_tasks.py  training_tasks.py
apps/ml-service/tests/: conftest.py  test_api_integration.py  test_phase1.py
infra/docker/: docker-compose.yml
